# Bolt-x-OpenBridge

./: .gitignore  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.cjs  tailwind.config.js  vite.config.ts
mcp_agent/: README.md  graph_demo.py  load_model.py  main.py  pyproject.toml  requirements.txt
mcp_agent/app/: graph.py  graph_demo.py  graph_simple.py  load_model.py  main.py  mcp_agent.py  mock_llm.py  prompt.py  test_mcp_server.ipynb  utils.py
mcp_agent/app/agents/: agent_with_artifacts.py  designer.py  implementation_planner.py  implementer.py  planner.py  spec_generator.py  tester.py  verifier.py
mcp_agent/app/models/: artifact_models.py
mcp_agent/app/prompts/: artifact_instructions.md  artifact_prompt.py  brain_prompt.py  creator_prompt.py  designer_prompt.py  font_and_css.md  formatting_info.md  openbridge_defaults.md  reasoning_guidelines.md  spec_creator.py  system_constraints.md  tool_instructions.py
mcp_agent/app/retriever/: build_vectorstore.py  retriever.py
mcp_agent/app/templates/: templates.json
mcp_agent/app/test/: test_framework.py  test_suites.py
mcp_agent/app/testing/: graph_demo.py
mcp_agent/app/tools/: artifact_spec.py
mcp_agent/files/: react-tailwind-todo-2.json
mcp_agent/kb/: index_meta.json  manifest_min.json
mcp_agent/mcp_agent/: graph.py  load_model.py  main.py  prompt.py
mcp_agent/playground/: graph_demo.py  test_new_parser.ipynb  test_parser.ipynb
mcp_agent/scripts/: build_vector_store.py  prune_manifest.py
mcp_agent/tests/: mock_generator.py  test_graph_demo.py  test_load_model.py
(+75 files in other folders)
